# MyProject

./: .gitignore  CMakeLists.txt  README-GAUGES.txt
.github/workflows/: ci.yml
config/: specs.json
src/: CMakeLists.txt
src/backend/: json_utils.h  server.cpp  specs_store.cpp  specs_store.h
src/core/: pipeline.cpp  pipeline.h  registry.cpp  registry.h
src/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  RoiView.cpp  RoiView.h  main.cpp
src/measure/: calibration.cpp  calibration.h  caliper.cpp  caliper.h  gauges.cpp  gauges.h  geometry.cpp  geometry.h  perspective.cpp  perspective.h  report.cpp  report.h
src/ops/: canny.cpp  canny.h  morph.cpp  morph.h  threshold.cpp  threshold.h
tests/: CMakeLists.txt  test_gauges.cpp  test_golden_metrics.cpp  test_gui_smoke.cpp  test_http_integration.cpp  test_integration.cpp  test_perf.cpp  test_units.cpp
